# Shake_It

./: MinMaxList.txt  db.json  pyproject.toml
cart/: cart.py  forms.py  urls.py  views.py
cart/templates/cart/: detail.html
config/: settings.py  urls.py
media/media/cocktail/: Содержание OneNote.onetoc2
media/media/ingredient/: Содержание OneNote.onetoc2  тобаско_yfsWk4b.jfif
orders/: admin.py  forms.py  models.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_auto_20220227_1906.py
orders/templates/orders/order/: create.html
search/: urls.py  views.py
shop/: admin.py  forms.py  models.py  views.py
shop/migrations/: 0001_initial.py  0002_auto_20211228_1703.py  0003_alter_ingredient_image.py  0004_alter_ingredient_image.py  0005_auto_20220225_1803.py
static/shop/: style.css
templates/auth/: loginuser.html  singupuser.html
templates/cart/: detail.html
templates/cocktail_base/: cocktail_detail.html
templates/orders/: all_orders.html  order_detail.html  test_page.html
templates/orders/order/: create.html  created.html
templates/search/: search.html  search_ingredient.html
templates/shop/: base.html  home.html  ingredient_detail.html  shop.html
