[tool.poetry]
name = "shake_it_poetry"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Pillow = "^8.4.0"
haystack = "^0.42"
Django = "~=3.2"
django-crispy-forms = "^1.14.0"
social-auth-app-django = "^5.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
